--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,14 +1,5 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "next/typescript",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:tailwindcss/recommended"
-  ],
-  "plugins": ["tailwindcss"],
-  "rules": {
-    "tailwindcss/classnames-order": "warn",
-    "tailwindcss/no-custom-classname": "off"
-  }
+    "next"
+  ]
 }
