build: tailwind prettier

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-  "extends": [
-    "next"
-  ]
+  "extends": ["next"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
