--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/OmahTI-UGM/oprec-25#readme",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/nodemailer": "^6.4.16",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "express-mongo-sanitize": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "nodemailer": "^6.9.16"
