feat: - admin page - fixed text size in landing page

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-  "extends": ["next"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "extends": ["next"]
+//  "plugins": ["prettier"],
+//  "rules": {
+//    "prettier/prettier": "error"
+//  }
 }
