fix[landing-page]: menambahkan x button di less than small screen navbar, fix yg lainnya bro pokoknya

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,7 +1,22 @@
 {
-  "extends": ["next"]
+  "extends": ["next"],
 //  "plugins": ["prettier"],
 //  "rules": {
 //    "prettier/prettier": "error"
 //  }
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@modules", "./src/modules/"],
+          ["@hooks", "./src/hooks/"],
+          ["@components", "./src/components/"],
+          ["@helpers", "./src/helpers/"],
+          ["@contexts", "./src/contexts/"],
+          ["@assets", "./public/assets/"]
+        ],
+        "extensions": [".ts", ".js", ".tsx", ".json"]
+      }
+    }
+  }
 }
