feat[landing-page]: add slug makomti

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -13,7 +13,8 @@
           ["@components", "./src/components/"],
           ["@helpers", "./src/helpers/"],
           ["@contexts", "./src/contexts/"],
-          ["@assets", "./public/assets/"]
+          ["@assets", "./public/assets/"],
+          ["@/modules", "./src/modules/"]
         ],
         "extensions": [".ts", ".js", ".tsx", ".json"]
       }
